# coq

./: dune  dune-project
dev/: dune
dev/shim/: dune
ide/coqide/: dune
interp/: notation.ml
kernel/: vmvalues.ml
man/: dune
tactics/: cbn.ml  class_tactics.ml
tools/configure/: configure.ml
vernac/: declare.ml  mltop.ml
